[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Gustavo Porto <gustavoporto@ya.ru>"]
packages = [
	{ include = "app/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
app = "app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

